--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "run-p dev:*",
     "dev:build": "tsup ./src/index.ts --dts --clean --format esm --watch",
     "dev:serve": "wds --root-dir=. --node-resolve --watch",
-    "prepublish": "npm run build"
+    "release": "x-release"
   },
   "keywords": [
     "web-components",
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@0x-jerry/x-release": "^0.3.6",
     "@material/mwc-icon": "0.27.0",
     "@web/dev-server": "0.1.34",
     "@webcomponents/webcomponentsjs": "^2.6.0",
